# opengeh-measurements

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  Makefile  Pycharm & Docker.md  README.md  pyproject.toml  t.sh
source/bronze/: README.md  pyproject.toml  temp_descriptor.binpb
source/bronze/src/bronze/: entry_points.py
source/bronze/src/opengeh_bronze/: entry_points.py
source/bronze/tests/: conftest.py
source/bronze/tests/application/: test_migrations.py  test_submitted_transactions.py
source/bronze/tests/helpers/: environment_variables_helpers.py
source/bronze/tests/infrastructure/: test_migrated_transaction_repositories.py
source/bronze/tests/migrations/: test_migrations.py
source/capacity_settlement/: README.md  pyproject.toml  setup.py
source/capacity_settlement/capacity_settlement/entry_points/: entry_point.py
source/capacity_settlement/capacity_settlement_job/entry_points/: entry_point.py
source/capacity_settlement/contracts/: parameters-reference.txt
source/capacity_settlement/contracts/electricity_market__capacity_settlement/: metering_point_periods_v1.py
source/capacity_settlement/contracts/measurements_bronze/: measurements_bronze_v1.py
source/capacity_settlement/electricity_market__capacity_settlement/: metering_point_periods_v1.py
source/capacity_settlement/src/: setup.py
source/capacity_settlement/src/capacity_settlement/: __init__.py  entry_point.py
source/capacity_settlement/src/capacity_settlement_2/: entry_point.py
source/capacity_settlement/src/contracts/: parameters-reference.txt
source/capacity_settlement/src/opengeh_capacity_settlement/: entry_point.py
source/capacity_settlement/test_common/entry_points/: entry_point_test_util.py
source/capacity_settlement/tests/: __init__.py  conftest.py  sample.env  test.local.settings.sample.yml  test_configuration.py  testsession_configuration.py
source/capacity_settlement/tests/capacity_settlement_tests/: test_entry_points.py
source/capacity_settlement/tests/container_tests/: conftest.py  databricks_api_client.py  environment_configuration.py  requirements.txt  test_container.py
source/capacity_settlement/tests/entry_points/: test_entry_points.py
source/capacity_settlement/tests/scenario_tests/: capacity_settlement_test_args.py  conftest.py
source/core/: README.md  pyproject.toml  temp_descriptor.binpb
source/core/src/core/: containers.py  entry_points.py
source/core/tests/: .gitignore  README.md  conftest.py
source/core/tests/bronze/: conftest.py
source/core/tests/features/: brs_021_transmission_of_meter_readings.feature
source/core/tests/gold/: conftest.py  test_entry_points.py
source/core/tests/helpers/: binary_helper.py  datetime_helper.py  environment_variables_helpers.py  identifier_helper.py  protobuf_helper.py  schema_helper.py  table_helper.py
source/core/tests/integration/: README.md  conftest.py  test_dummy.py
source/core/tests/migrations/: conftest.py  test_migrations.py  test_migrations_runner.py  test_views.py
source/core/tests/settings/: conftest.py  test_bronze_settings.py  test_catalog_settings.py  test_gold_settings.py  test_kafka_authentication_settings.py  test_silver_settings.py  test_storage_account_settings.py
source/core/tests/silver/: .gitignore  conftest.py
source/core/tests/step_definitions/: test_brs_021_transmission_of_meter_readings.py
source/core/tests/subsystem_tests/: .sample.env  README.md  conftest.py  test_core.py  testsession.local.settings.sample.json
source/core/tests/unit_tests/: conftest.py  test_project_scripts.py
source/core/tests/utility/: conftest.py  test_datetime_helper.py  test_environment_variable_helper.py  test_rules_validator.py  test_shared_helpers.py
source/database_migration/: README.md  pyproject.toml
source/database_migration/src/database_migration/: container.py  migrations.py  substitutions.py
source/database_migration/tests/: conftest.py
source/database_migration/tests/database_migration/: test_init.py  test_migrations.py
source/database_migration/tests/helpers/: assert_helper.py
source/database_migration/tests/migrations/: test_migrations.py
source/database_migration/tests/testen/: test_init.py  test_migrations.py
source/geh_calculated_measurements/: README.md  pyproject.toml
source/geh_calculated_measurements/examples/stateful_tests/: ExampleTester.py  JobTester.py  test_correct_implementation.py  test_wrong_implementation.py
source/geh_calculated_measurements/src/covernator/: run_covernator.py
source/geh_calculated_measurements/src/geh_calculated_measurements/: __init__.py
source/geh_calculated_measurements/tests/: .sample.env  __init__.py  conftest.py  environment_configuration.py  external_data_products.py  internal_tables.py  test_configuration.py  testsession.local.settings.yml  testsession.local.settings.yml.sample  testsession_configuration.py
source/geh_calculated_measurements/tests/capacity_settlement/: __init__.py  conftest.py  test_configuration.py
source/geh_calculated_measurements/tests/common/: test_table_properties.py
source/geh_calculated_measurements/tests/data_products/: conftest.py
source/geh_calculated_measurements/tests/electrical_heating/: .sample.env  __init__.py  conftest.py
source/geh_calculated_measurements/tests/measurements_report/: __init__.py
source/geh_calculated_measurements/tests/missing_measurements_log/: __init__.py  conftest.py
source/geh_calculated_measurements/tests/net_consumption_group_6/: __init__.py
source/geh_calculated_measurements/tests/subsystem_tests/: conftest.py  demo_test.py  environment_configuration.py  seed_gold_table.py
source/measurements/: pyproject.toml
source/measurements/contracts/: PersistSubmittedTransaction.proto  SubmittedTransactionPersisted.proto  SubmittedTransactionReceipt.proto  persist_submitted_transaction.binpb  submitted_transaction_receipt.binpb
source/measurements/src/contracts/: DecimalValue.proto  (+1 more)
source/measurements/tests/: conftest.py  test_main.py
source/opengeh_calculated_measurements/electrical_heating/: pyproject.toml
(+2900 files in other folders)
