[project]
name="measurements-mono"
version="0.1.0"
dependencies = [
    "capacity_settlement",
    "electrical_heating",
]
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["source/capacity_settlement", "source/electrical_heating", "source/measurements", "test_package"]

[tool.uv.sources]
electrical_heating = { workspace = true }
capacity_settlement = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

