[project]
name = "bronze"
version = "0.1.0"
description = "Streaming to the bronze layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opengeh-spark-sql-migrations @ git+https://git@github.com/Energinet-DataHub/opengeh-python-packages@3.0.1#subdirectory=source/spark_sql_migrations",
]

[project.scripts]
migrate = "bronze.entry_points:migrate"

[dependency-groups]
dev = [
    "opengeh-testcommon",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml:coverage.xml --cov=bronze -ra -vv"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "T201",
    "UP",
]
ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
exclude = [
    "notebooks/*",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources.opengeh-testcommon]
git = "https://github.com/Energinet-DataHub/opengeh-python-packages"
subdirectory = "source/testcommon"
rev = "3.0.1"
