[project]
name = "opengeh-capacity-settlement"
version = "1.0.0"
description = "Capacity settlement app"
requires-python = ">=3.11"
dependencies = [
    "configargparse==1.7.0",
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "python-dateutil==2.8.2",
    "azure-monitor-opentelemetry==1.6.4",
    "azure-core==1.32.0",
    "opengeh-telemetry",
]

[project.scripts]
execute = "capacity_settlement.entry_point:execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capacity_settlement"]

[tool.uv.sources]
opengeh-telemetry = { git = "https://github.com/Energinet-DataHub/opengeh-python-packages", subdirectory = "source/telemetry", rev = "3.0.1" }
opengeh-testcommon = { git = "https://github.com/Energinet-DataHub/opengeh-python-packages", subdirectory = "source/testcommon", rev = "3.0.1" }

[dependency-groups]
dev = ["pytest>=8.3.4", "opengeh-testcommon"]
