[project]
name = "capacity_settlement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jpm@halfspace.io" },
]
requires-python = ">=3.10"
dependencies = [
    "azure-core==1.32.0",
    "azure-monitor-opentelemetry==1.6.4",
    "configargparse==1.7.0",
    "delta-spark==3.2.0",
    "opengeh-telemetry",
    "pyspark==3.5.1",
    "python-dateutil==2.8.2",
    "databricks-sdk==0.41.0",
]

[project.scripts]
capacity_settlement = "capacity_settlement.entry_point:execute"

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "mypy>=1.14.1",
    "opengeh-testcommon",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml:coverage.xml --cov=capacity_settlement -ra -vv"
norecursedirs = ["container_tests"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "D",
    "D401",
    "E",
    "F",
    "I",
    "T201",
    "UP",
]
ignore = [
    "D417",
    "E501",
    "UP006",
    "UP007",
    "UP035",
]
exclude = [
    "notebooks/*",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources.opengeh-telemetry]
git = "https://github.com/Energinet-DataHub/opengeh-python-packages"
subdirectory = "source/telemetry"
rev = "3.0.1"

[tool.uv.sources.opengeh-testcommon]
git = "https://github.com/Energinet-DataHub/opengeh-python-packages"
subdirectory = "source/testcommon"
rev = "3.0.1"
