[project]
name = "database-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opengeh-spark-sql-migrations @ git+https://git@github.com/Energinet-DataHub/opengeh-python-packages@3.0.0#subdirectory=source/spark_sql_migrations",
]

[project.scripts]
migrate = "database_migration.migrations:migrate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true
