[project]
name = "geh-calculated-measurements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
geh-calculated-measurements = "geh_calculated_measurements:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
