[project]
name = "geh_calculated_measurements"
version = "0.1.0"
description = "A combined package for capacity settlement, electrical heating and missing measurements log."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core==1.32.0",
    "azure-monitor-opentelemetry==1.6.7",
    "configargparse==1.7.0",
    "delta-spark==3.3.0",
    "geh_common @ git+https://git@github.com/Energinet-DataHub/opengeh-python-packages@geh_common_5.7.0#subdirectory=source/geh_common",
    "pydantic-settings>=2.7.1",
    "pyspark==3.5.3",
    "python-dateutil==2.8.2",
    "tomli>=2.2.1",
]

[project.scripts]
execute_electrical_heating = "geh_calculated_measurements.electrical_heating.entry_point:execute"
execute_capacity_settlement = "geh_calculated_measurements.capacity_settlement.entry_point:execute"
execute_net_consumption_group_6 = "geh_calculated_measurements.net_consumption_group_6.entry_point:execute"
execute_missing_measurements_log = "geh_calculated_measurements.missing_measurements_log.entry_point:execute"

migrate = "geh_calculated_measurements.database_migrations.entry_point:migrate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "databricks-sdk>=0.41.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "filelock>=3.18.0",
]

[tool.pytest.ini_options]
# -s ensures that print("<text>") is written to output.
addopts = [
    "--import-mode=importlib",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=geh_calculated_measurements",
    "-ra",
    "-vv",
    "-s",
    # pytest-xdist options
    "-n=auto",
    "--dist=loadfile",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# See more here: https://docs.astral.sh/ruff/rules/
select = ["D", "D401", "E", "F", "I", "T201", "UP", "PT"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D417",
    "E501",
    "UP006",
    "UP007",
    "UP035",
]
exclude = ["notebooks/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
