[project]
name = "measurements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jpm@halfspace.io" },
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
measurements = "measurements:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml:coverage.xml --cov=measurements -ra\n-vv"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "T201",
    "UP",
]
ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
exclude = [
    "notebooks/*",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]
